--- a/src/app/companies/company-list/company-list.component.html
+++ b/src/app/companies/company-list/company-list.component.html
@@ -1,3 +1,5 @@
+<div id="overlay" *ngIf="isLoading"></div>
+<app-loading [isLoading]="isLoading"></app-loading>
 <div class="companyListContainer" *ngIf="!showDelete">
   <div class="full right">
       <button type="button" class="add" (click)="addCompany()">{{companyLabels.addCompany}}</button>
