--- a/src/app/companies/cc-select/cc-select.component.css
+++ b/src/app/companies/cc-select/cc-select.component.css
@@ -2,6 +2,16 @@
   text-align: left;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #999;
+  position: relative;
+}
+
+.ccSelect .ccSelectList {
+  position: absolute;
+  top: 38px;
+  left: 0;
+  z-index: 4;
+  width: 100%;
+  background: white;
 }
 
 .ccSelect button {
@@ -56,10 +66,6 @@
   cursor: pointer;
   border-bottom: none;
   position: relative;
-}
-
-.ccSelect .listItem:first-child {
-  border-top: none;
 }
 
 .ccSelect .listItem:last-child {
