--- a/src/app/products/product-create/product-create.component.css
+++ b/src/app/products/product-create/product-create.component.css
@@ -1,1 +1,72 @@
 
+.companySelect {
+  text-align: left;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #999;
+  position: relative;
+}
+
+.companySelect .companySelectList {
+  position: absolute;
+  top: 38px;
+  left: 0;
+  z-index: 4;
+  width: 100%;
+  background: white;
+}
+
+.companySelect button {
+  background: none;
+  padding: 12px 10px;
+  border: 1px solid #ccc;
+  color: #7d7a7a;
+  height: auto;
+  width: 100%;
+  text-align: left;
+  outline: none;
+  position: relative;
+}
+
+.companySelect .fa-chevron-down, .companySelect .fa-chevron-up {
+  color: #ccc;
+  font-size: 12px;
+  text-align: right;
+}
+
+.companySelect span {
+  display: inline-block;
+}
+
+.companySelect .icon,
+.companySelect .iconToggle {
+  width: 38px;
+  text-align: right;
+  position: absolute;
+  right: 8px;
+  top: 8px;
+}
+
+.companySelect .iconToggle {
+  top: 10px;
+}
+
+.companySelect .listItem {
+  padding: 10px;
+  border: 1px solid #ccc;
+  color: #999;
+  cursor: pointer;
+  border-bottom: none;
+  position: relative;
+}
+
+.companySelect .listItem:last-child {
+  border-bottom: 1px solid #ccc;
+}
+
+.companySelect .listItem:hover, .companySelect button:hover {
+  background: aliceblue;
+}
+
+.companySelect.selected .listItem:first-child {
+  border-top: 1px solid #ccc;
+}
