--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,15 @@ header {
   width: 50%;
 }
 
+.quarterContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.quarter {
+  width: 25%;
+}
+
 h1, h2, h3, h4, h5 {
   margin: 10px;
 }
@@ -271,6 +280,11 @@ label {
 
   .half:first-child {
     margin-right: 15px;
+  }
+
+  .quarterContainer {
+    display: flex;
+    flex-direction: row;
   }
 }
 
