--- a/src/app/products/product-list/product-list.component.css
+++ b/src/app/products/product-list/product-list.component.css
@@ -29,5 +29,42 @@
 }
 
 .productListContainer .add {
-margin-bottom: 12px;
+  margin-bottom: 12px;
+}
+
+.productListContainer table {
+  background: white;
+}
+
+.productListContainer table td, .productListContainer table th {
+  padding: 12px 10px;
+}
+
+.productListContainer table td.small, .productListContainer table th.small {
+  width: 10%;
+  text-align: center;
+}
+
+.productListContainer table td.small, .productListContainer table th.small {
+  width: 10%;
+  text-align: center;
+}
+
+.productListContainer table th.small.capitalize {
+  text-transform: capitalize;
+}
+
+.productListContainer table th.tableLink {
+  cursor: pointer;
+  position: relative;
+}
+
+.productListContainer table th.tableLink span {
+  display: inline-block;
+}
+
+.productListContainer table th.tableLink span i {
+  position: absolute;
+  right: 10px;
+  top: 12px;
 }
