--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,15 +2,35 @@
 <app-loading [isLoading]="isLoading"></app-loading>
 <div class="productListContainer" *ngIf="!showDelete">
   <div class="full right">
-      <button type="button" class="add" (click)="addProduct()">{{productLabels.addProduct}}</button>
+    <button type="button" class="add" (click)="addProduct()">{{productLabels.addProduct}}</button>
   </div>
-  <div *ngIf="products && products.length > 0">
-    <div *ngFor="let product of products" class="productHeader">
-      <span class="productItem title">{{product.name}}</span>
-      <a class="productItem link" *ngIf="isLoggedIn" [routerLink]="['/products/edit', product.id]"><i class="fas fa-pencil-alt"></i></a>
-      <a class="productItem link" *ngIf="isLoggedIn" (click)="openDeleteModal(product)"><i class="fas fa-trash-alt"></i></a>
-    </div>
-  </div>
-  <p *ngIf="products.length === 0">No products added yet</p>
+  <table  *ngIf="products && products.length > 0">
+    <tr>
+      <th (click)="sortProductsByProperty(productProperties.name)" class="tableLink">
+          <span>{{ productLabels.mainTitle }}</span>
+          <span class="right"><i class="linkIcon fas" [ngClass]="{ 'fa-chevron-down': !sortAscName, 'fa-chevron-up': sortAscName }"></i></span>
+      </th>
+      <th>{{ productLabels.company }}</th>
+      <th>{{ productLabels.fuelType }}</th>
+      <th (click)="sortProductsByProperty(productProperties.totalYearlyCost)" class="tableLink">
+          <span>{{ productLabels.yearlyCost }}</span>
+          <span class="right"><i class="linkIcon fas" [ngClass]="{ 'fa-chevron-down': !sortAscYearlyCost, 'fa-chevron-up': sortAscYearlyCost }"></i></span>
+      </th>
+      <th class="small capitalize">{{ keys.edit }}</th>
+      <th class="small capitalize">{{ keys.delete }}</th>
+    </tr>
+    <tr *ngFor="let product of products">
+      <td>{{ product.name }}</td>
+      <td>{{ product.company.name }}</td>
+      <td *ngIf="product.hasBoth">{{ productLabels.both }}</td>
+      <td *ngIf="!product.hasBoth && product.hasElectricity">{{ productLabels.electricity }}</td>
+      <td *ngIf="!product.hasBoth && product.hasGas">{{ productLabels.gas }}</td>
+      <td>{{ product.totalYearlyCost }}</td>
+      <td class="small"><a class="productItem link" *ngIf="isLoggedIn" [routerLink]="['/products/edit', product.id]"><i class="fas fa-pencil-alt"></i></a></td>
+      <td class="small"><a class="productItem link" *ngIf="isLoggedIn" (click)="openDeleteModal(product)"><i class="fas fa-trash-alt"></i></a></td>
+    </tr>
+  </table>
+  <p *ngIf="products.length === 0">{{ productLabels.noProducts }}</p>
 </div>
-<app-product-modal *ngIf="showDelete" (productModalResult)="deleteProduct($event)" [title]="title" [message]="message" [type]="type" [id]="productToDeleteId"></app-product-modal>
+<app-product-modal *ngIf="showDelete" (productModalResult)="deleteProduct($event)" [title]="title" [message]="message" [type]="type"
+  [id]="productToDeleteId"></app-product-modal>
