--- a/src/app/companies/company-list/company-list.component.html
+++ b/src/app/companies/company-list/company-list.component.html
@@ -1,21 +1,27 @@
 <div id="overlay" *ngIf="isLoading"></div>
 <app-company-loading [isLoading]="isLoading"></app-company-loading>
 <div class="companyListContainer" *ngIf="!showDelete">
-    <div class="full right">
+  <div class="container">
+    <div class="flex1">
+      <input type="text" [(ngModel)]="searchText" placeholder="Search" class="search">
+    </div>
+    <div class="flex1 right">
       <button type="button" class="add" (click)="addCompany()">{{companyLabels.addCompany}}</button>
     </div>
-    <table  *ngIf="companies && companies.length > 0">
-      <tr>
-        <th>{{ companyLabels.mainTitle }}</th>
-        <th class="small capitalize">{{ keys.edit }}</th>
-        <th class="small capitalize">{{ keys.delete }}</th>
-      </tr>
-      <tr *ngFor="let company of companies">
-        <td>{{ company.name }}</td>
-        <td class="small"><a class="companyItem link" *ngIf="isLoggedIn" [routerLink]="['/companies/edit', company.id]"><i class="fas fa-pencil-alt"></i></a></td>
-        <td class="small"><a class="companyItem link" *ngIf="isLoggedIn" (click)="openDeleteModal(company)"><i class="fas fa-trash-alt"></i></a></td>
-      </tr>
-    </table>
-    <p *ngIf="companies.length === 0">{{ companyLabels.noCompanies }}</p>
   </div>
-<app-cc-modal *ngIf="showDelete" (ccModalResult)="deleteCompany($event)" [title]="title" [message]="message" [type]="type" [id]="companyToDeleteId"></app-cc-modal>
+  <table *ngIf="companies && companies.length > 0">
+    <tr>
+      <th>{{ companyLabels.mainTitle }}</th>
+      <th class="small capitalize">{{ keys.edit }}</th>
+      <th class="small capitalize">{{ keys.delete }}</th>
+    </tr>
+    <tr *ngFor="let company of companies | filter : searchText">
+      <td>{{ company.name }}</td>
+      <td class="small"><a class="companyItem link" *ngIf="isLoggedIn" [routerLink]="['/companies/edit', company.id]"><i class="fas fa-pencil-alt"></i></a></td>
+      <td class="small"><a class="companyItem link" *ngIf="isLoggedIn" (click)="openDeleteModal(company)"><i class="fas fa-trash-alt"></i></a></td>
+    </tr>
+  </table>
+  <p *ngIf="companies.length === 0">{{ companyLabels.noCompanies }}</p>
+</div>
+<app-cc-modal *ngIf="showDelete" (ccModalResult)="deleteCompany($event)" [title]="title" [message]="message" [type]="type"
+  [id]="companyToDeleteId"></app-cc-modal>
