--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,9 @@
 header {
   max-width: 990px;
   margin: 0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  /* background: navy; */
 }
 
 nav {
@@ -10,28 +13,14 @@ nav {
 
 .navItem {
   padding: 6px 10px;
-  color: grey;
+  color: darkgray;
   font-size: 14px;
   text-decoration: none;
 }
 
 .navItem:hover, .navItem.active {
-  background: #f4df8c;
-  color: white;
-}
-
-.logoutBut {
-  width: auto;
-  height: 30px;
-  font-size: 14px;
-  line-height: 1;
-  color: lightcoral;
-  background: white;
-}
-
-.logoutBut:hover {
-  background: #f4df8c;
-  color: white;
+  background: #D7F5F7;
+  color: navy;
 }
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
